# desktop

./: .gitignore  Makefile  README.md  THIRD-PARTY-LICENSES.txt  index.html  overlay.html  package-lock.json  package.json  preferences.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  windows.yml
scripts/: gen-licenses.sh
scripts/xwin-shims/: README.md  llvm-lib  llvm-rc
src/: dom.ts  icons.ts  ipc.ts  main.ts  overlay.ts  preferences.ts  styles.css  types.ts
src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: capture_test.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: api.rs  auth.rs  capture.rs  capture_macos.rs  capture_windows.rs  commands.rs  lib.rs  main.rs  prefs.rs  secure.rs
src-tauri/swift/TeilCapture/: Package.swift
src-tauri/swift/TeilCapture/Sources/TeilCapture/: CaptureEngine.swift  CaptureFFI.swift  CaptureFeedback.swift  CaptureResult.swift  CrossMonitorStitcher.swift  OverlayCoordinator.swift  PermissionService.swift  SelectionOverlayView.swift  WindowSelectionCoordinator.swift  WindowSelectionOverlayView.swift
src-tauri/teil-capture-windows/: Cargo.toml
src-tauri/teil-capture-windows/src/: lib.rs  overlay.rs
