[package]
name = "teil-capture-windows"
version = "0.1.0"
edition = "2021"
description = "Native Win32 interactive capture (overlay + selection) for teil.ing"
publish = false

# Only pulled in by the app via [target.'cfg(windows)'.dependencies]; everything is
# additionally cfg(windows)-gated so the crate compiles to an inert stub anywhere else.
[target.'cfg(windows)'.dependencies]
# Same crate/version xcap re-exports, so image types unify (matches the app crate).
image = { version = "0.25", default-features = false, features = ["png"] }
# Window enumeration + occlusion-free per-window pixel grabs.
xcap = "0.9"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
